 * The Echo and Reverb effects can now apply gradually increasing distortion to
   the delayed signal.
 * Various performance and RAM usage improvements.
 * The source distribution can now be compiled for RISC-V 64 systems thanks to
   @aimixsaka.
 * New preset: Analog Brass.
 * FST: hosts which support VSTXML files can now show full length parameter
   names instead of abbreviations.
 * Bugfix: dynamic envelope parameter changes could produce glitches, sudden
   jumps, and some sections of the envelope could get lost, especially in
   monophonic mode.
 * Bugfix: decayed notes were not garbage collected when envelopes were
   assigned only to the amplitude parameter of the oscillators, but not to
   the first oscillator's subharmonic amplitude which was left at the default 0
   setting. (E.g. the Bells 1 and 2 presets while holding the sustain pedal.)
 * Bugfix: the FST plugin will no longer crash if it is loaded in a host which
   does not supply a host-callback. (Hosts like that are probably rare, and
   features like tempo-synchronization cannot work in such hosts.)

v2.4.4 (2023-11-19)
 * Reduced RAM usage.
 * Bugfix: hosts that use variable length rendering blocks could cause JS80P in
   some circumstance to leave garbage in the buffers of delay based effects
   when they decayed into silence, which (depending on the settings of the
   patch) could produce audible glitches. Now the delay buffers are properly
   cleaered when both their input and their feedback line decays into silence.
 * Bugfix: despite the efforts in v1.5.1, in some circumstances, short delay
   times (lower than 3-5 milliseconds) could still make the feedback lines
   noisy in delay based effects in hosts which use variable length rendering
   blocks (e.g. FL Studio). The rendering logic has been adjusted to prevent
   delay feedback lines from falling behind and becoming discontinuous when the
   host requests a large rendering batch after a sequence of short ones.

v2.4.3 (2023-11-18)